[package]
name = "visitor-badge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.0.0", features = ["sqlite", "r2d2"] }
dotenv = "0.15"
env_logger = "*"
log = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
